# webserver

./: .gitignore  Cargo.toml  LICENSE.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  workflow.yml
config/: default.toml
services/imageserver/: Cargo.toml
services/imageserver/config/: settings.toml
services/imageserver/src/: errors.rs  lib.rs  logger.rs  main.rs  server.rs  settings.rs
services/imageserver/src/common/: mod.rs  route.rs  schemas.rs
services/imageserver/src/imgsrv/: errors.rs  mod.rs  route.rs  schemas.rs  utils.rs
services/webserver/: Cargo.toml
services/webserver/config/: default.toml
services/webserver/src/: lib.rs  logger.rs  main.rs  server.rs  settings.rs
services/webserver/src/authentication/: mod.rs  route.rs
services/webserver/src/common/: mod.rs  route.rs  schemas.rs
src/: api.rs  lib.rs  logger.rs  main.rs  server.rs  settings.rs
