[workspace]
members = [
    "services/webserver",
    "services/imageserver"
]

[workspace.package]
version = "0.1.0"
authors = ["Hicham Azimani <hicham.azimani@outlook.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/AzHicham/webserver.git"
homepage = "https://github.com/AzHicham/webserver.git"
readme = "README.md"


[profile.dev]
opt-level = 1
codegen-units = 16

[profile.release]
opt-level = 3
debug = true
codegen-units = 16
panic = 'unwind'
