[package]
name = "imageserver"
description = "Simple REST imageserver"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
config = "0.13"
anyhow = "1"
lazy_static = "1.4.0"
tracing = { version = "0.1", features = ["std", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["serde_json", "json"] }
openslide = "0.2.0"
image = "0.24.4"


[[bin]]
name = "imageserver"
path = "src/main.rs"
