[package]
name = "imageserver"
description = "Simple REST imageserver"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
config = "0.13"
anyhow = "1"
lazy_static = "1.4.0"
tracing = { version = "0.1", features = ["std", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix-web = "4.2.1"
openslide-rs = { path = "../../../openslide-rs"}
cached = "0.39.0"
derive_more = "0.99.17"
image = "0.24.4"


[[bin]]
name = "imageserver"
path = "src/main.rs"
